*timeline-1.4.1 (28 Dec 2014)

  28 Dec 2014; Poncho <poncho@spahan.ch> +timeline-1.4.1.ebuild,
  -timeline-1.4.0.ebuild:
  x11-misc/timeline: version bump

*timeline-1.4.0 (08 Nov 2014)

  08 Nov 2014; Poncho <poncho@spahan.ch> +timeline-1.4.0.ebuild,
  -files/Xml-escape-text-in-svg-files.patch, -files/icons/16.png,
  -files/icons/32.png, -files/icons/48.png, -files/icons/backward.png,
  -files/icons/calendar.png, -files/icons/close.png, -files/icons/feedback.png,
  -files/icons/forward.png, -files/icons/home.png, -files/icons/stickypin.png,
  -files/icons/unstickypin.png, -timeline-1.2.4.ebuild,
  -timeline-1.3.0-r1.ebuild, -timeline-1.3.0.ebuild:
  x11-misc/timeline: version bump

*timeline-1.3.0-r1 (10 Jul 2014)

  10 Jul 2014; Poncho <poncho@spahan.ch> +timeline-1.3.0-r1.ebuild:
  x11-misc/timeline: remove useflags

*timeline-1.3.0 (02 Jul 2014)

  02 Jul 2014; Poncho <poncho@spahan.ch> +timeline-1.3.0.ebuild,
  -timeline-1.0.1-r1.ebuild:
  x11-misc/timeline: version bump

*timeline-1.2.4 (08 Apr 2014)

  08 Apr 2014; Poncho <poncho@spahan.ch> +metadata.xml, +timeline-1.2.4.ebuild,
  -timeline-1.1.0.ebuild, timeline-1.0.1-r1.ebuild:
  x11-misc/timeline: version bump, drop x86 keyword