@@ -1,3 +1,9 @@
+*timeline-1.5.0 (30 Jan 2015)
+
+  30 Jan 2015; Poncho <poncho@spahan.ch> +timeline-1.5.0.ebuild,
+  -timeline-1.4.1.ebuild:
+  x11-misc/timeline: version bump
+
 *timeline-1.4.1 (28 Dec 2014)
 
   28 Dec 2014; Poncho <poncho@spahan.ch> +timeline-1.4.1.ebuild,
